# ba_feature_review_app

./: .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml
PRD/: project_3_ai_business_analyst_copilot.md  project_3_feature_review_app_development_plan.md
docs/: architecture.md  diagram_rendering_strategy.md  (+3 more)
services/review-service/: pyproject.toml
services/review-service/src/feature_review/: __init__.py  models.py
services/review-service/src/feature_review/api/: __init__.py  config.py  main.py  models.py  routes.py  service.py
services/review-service/src/feature_review/checks/: __init__.py  common.py  diagram_branch_coverage.py  diagram_operation_coverage.py  enum_rules.py  feature_audit.py  incident_regression.py  open_questions.py  operation_coverage.py  response_coverage.py  schema_required_fields.py  security_coverage.py
services/review-service/src/feature_review/data/: __init__.py  diagram_loader.py  feature_catalog.py  manifest_loader.py  markdown_loader.py  paths.py
services/review-service/src/feature_review/diagrams/: __init__.py  plantuml_parser.py  renderer.py  step_mapper.py
services/review-service/src/feature_review/openapi/: __init__.py  operation_index.py  parser.py  schema_resolver.py  slicer.py
services/review-service/tests/: test_diagram_consistency_checks.py  test_diagram_loader.py  test_diagram_operation_mapping.py  test_feature_catalog.py  test_manifest_loader.py  test_markdown_loader.py  test_openapi_operation_index.py  test_openapi_slicer.py  test_plantuml_parser.py  test_review_api_contract.py  test_rule_checks.py
(+57 files in other folders)
