[project]
name = "feature-review-service"
version = "0.1.0"
description = "Deterministic backend data loading for the AI Feature Review ChatGPT App."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "PyYAML>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
