[project]
name = "feature-review-service"
version = "0.1.0"
description = "Deterministic backend data loading for the AI Feature Review ChatGPT App."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.7",
    "PyYAML>=6.0",
    "uvicorn[standard]>=0.34",
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/feature_review"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
